# ir-datasets-webis

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ir_datasets_webis/: __init__.py  __main__.py  bibliography.bib  downloads.json  test_webis_mastodon_2024.py  util.py  webis_mastodon_2024.py  webis_mastodon_2024.yaml
